# polars2svg

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  xyp.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: gen_examples.py  getting-started.md  index.md
docs/components/: chordp.md  histop.md  index.md  linkp.md  piep.md  smallp.md  spreadlinesp.md  timep.md  xyp.md
docs/guides/: count-color.md  interactivity.md  t-fields.md
notebooks/: color_modes.ipynb  golden_images.ipynb  webgpu_preview.ipynb
polars2svg/: __init__.py  _seriation.py  chordp.py  circle_packer.py  convey_proximity_layout.py  exceptions.py  export.py  histop.py  interactive_controller.py  laguerre_voronoi.py  layout_protocol.py  linkp.py  mds_at_scale.py  ncp_layout.py  od_flow_layout.py  p2s_background_mixin.py  p2s_bin_component_mixin.py  p2s_colors_mixin.py  p2s_component_color_mixin.py  p2s_displaylist.py  p2s_font_metrics.py  p2s_geometry_mixin.py  p2s_glyph_atlas.py  p2s_graph_mixin.py  p2s_interactive_mixin.py  p2s_legend_mixin.py  p2s_polars_mixin.py  p2s_render_mixin.py  p2s_text_mixin.py  p2s_time_mixin.py  p2s_webgpu_runtime.py  piep.py  polars2svg.py  polars_force_directed_layout.py  smallp.py  spreadlinepi.py  spreadlinesp.py  stack_control.py  tfdp_layout.py  timep.py  (+2 more)
tests/: histop_dataframes.py  label_fidelity_data.py  piep_dataframes.py  random_dataframe.py  svg_test_utils.py  test_bar_chart_styles.py  test_bar_chart_template.py  test_bar_colorize_consistency.py  test_changelog.py  test_chordp_basic.py  test_chordp_color.py  test_chordp_golden.py  test_chordp_inert_params.py  test_chordp_interactive.py  test_chordp_pos.py  test_circle_packer.py  test_color_overrides.py  test_context_label_fidelity.py  test_contributing.py  test_convey_proximity_layout.py  test_count_inert_warning.py  test_cross_component_consistency.py  test_crow_color_independence.py  test_displaylist.py  test_draw_border.py  test_dtype_keyed_logging.py  test_edge_case_inputs.py  test_export_save.py  test_filter_by_oval.py  test_gather_metrics.py  test_global_config.py  test_glyph_atlas.py  test_hex_color_detection.py  test_histop_basic.py  test_histop_color.py  test_histop_count.py  test_histop_distribution_strip.py  test_histop_exhaustive.py  test_histop_extended.py  test_histop_filter_by_rectangle.py  (+105 more)
tools/: gen_font_metrics.py  preflight.sh
